Fixed button z-index conflict.

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -325,3 +325,7 @@ button.btn-floating {
   left: 10%;
   transform: translate(-50%, -50%);
 }
+
+#return__btn {
+  z-index: 0;
+}
